--- a/src/css/_message.sass
+++ b/src/css/_message.sass
@@ -11,17 +11,18 @@
     color: #333
     margin: 5px
 
-.message
-    @extend %message-shared
+.jw
+    .message
+        @extend %message-shared
 
-.success
-    @extend  %message-shared
-    border-color: green
+    .success
+        @extend  %message-shared
+        border-color: green
 
-.error
-    @extend  %message-shared
-    border-color: red
+    .error
+        @extend  %message-shared
+        border-color: red
 
-.warning
-    @extend %message-shared
-    border-color: orange
+    .warning
+        @extend %message-shared
+        border-color: orange
