--- a/src/css/_nav.sass
+++ b/src/css/_nav.sass
@@ -1,10 +1,10 @@
-.jw-right
+.right
     float: right
-.jw-nav
+.nav
     padding: 10px
     background:  #545e75
     color: white
-    .jw-nav-link
+    .link
         display: inline-block
         padding: 6px 12px
         cursor: pointer
