--- a/src/css/_button.scss
+++ b/src/css/_button.scss
@@ -2,41 +2,75 @@
 
 %button  {
     margin: 3px;
-    padding: 10px 18px 8px 18px;
+    padding: 10px 18px 8px;
     border-radius: 6px;
     display: inline-block;
     cursor: pointer;
     font-size: 14px;
 }
 
-.jw {
-    .button {
-        color: white;
-        @extend %button;
-    }
+%no-select { 
+     -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+     -khtml-user-select: none; 
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none; 
+}
 
-    .primary {
-        background-color: $primary-color;
-        &:hover  {
-            background-color: lighten($primary-color, 5%);
-        }
+@mixin invert-button ($color) { 
+    @extend %no-select;
+    background-color: white;
+    border: 2px solid $color;
+    color: $color;
+    &:hover  {
+        color: lighten($color, 5%);
     }
-    .secondary {
-        background-color: $secondary-color;
-        &:hover  {
-            background-color: lighten($secondary-color, 5%);
-        }
+}
+
+@mixin normal-button($color) { 
+    @extend %button;
+    @extend %no-select;
+    color: white;
+    border: 2px solid $color;
+    background-color: $color;
+    &:hover  {
+        background-color: lighten($color, 5%);
     }
-    .positive {
-        background-color: $positive-color;
-        &:hover  {
-            background-color: lighten($positive-color, 5%);
-        }
-    }
-    .negative {
-        background-color: $negative-color;
-        &:hover  {
-            background-color: lighten($negative-color, 5%)
-        }
-    }
+}
+
+.jw.button {
+    @include normal-button($primary-color)
+}
+
+.jw.button.primary {
+    @include normal-button($primary-color)
+}
+
+.jw.button.secondary {
+    @include normal-button($secondary-color)
+}
+
+.jw.button.positive {
+    @include normal-button($positive-color)
+}
+
+.jw.button.negative {
+    @include normal-button($negative-color)
+}
+
+.jw.button.primary.invert {
+    @include invert-button($primary-color)
+}
+
+.jw.button.secondary.invert {
+    @include invert-button($secondary-color)
+}
+
+.jw.button.positive.invert {
+    @include invert-button($positive-color)
+}
+
+.jw.button.negative.invert {
+    @include invert-button($negative-color)
 }
