Fixed fonts path

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -2,7 +2,7 @@
 @import 'button';
 @import 'message';
 @import 'nav';
-// @import 'icons/icons';
+@import 'icons/icons';
 
 $font-stack: Helvetica, san-serif;
 
