--- a/src/css/_button.scss
+++ b/src/css/_button.scss
@@ -9,16 +9,16 @@
     font-size: 14px;
 }
 
-%no-select { 
-     -webkit-touch-callout: none; 
-    -webkit-user-select: none; 
-     -khtml-user-select: none; 
-       -moz-user-select: none; 
-        -ms-user-select: none; 
-            user-select: none; 
+%no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-@mixin invert-button ($color) { 
+@mixin invert-button ($color) {
     @extend %no-select;
     background-color: white;
     border: 2px solid $color;
@@ -28,7 +28,7 @@
     }
 }
 
-@mixin normal-button($color) { 
+@mixin normal-button($color) {
     @extend %button;
     @extend %no-select;
     color: white;
@@ -37,6 +37,16 @@
     &:hover  {
         background-color: lighten($color, 5%);
     }
+}
+
+.kkk:before {
+  content: '\f000';
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  color: #000;
+  font-size: 50px;
+  padding-right: .5em;
 }
 
 .jw.button {
